# TimeSeries-TP

./: .gitignore
TP1/: Assignment 1 - ML for TS (MVA).ipynb  FotiosKapotos_AdonisJamal.ipynb  Makefile  README.md  main.py  main.tex  pyproject.toml  requirements.txt
TP2/: AdonisJamal_FotiosKapotos.ipynb  AdonisJamal_FotiosKapotos.tex  Assignment 2 - ML for TS (MVA).ipynb  report.tex
TP3/: Assignment 3.ipynb  pyproject.toml
TP3/report/: report.tex
TP3/report/sections/: dtmf.tex  molene_graph.tex  node_classification.tex  sagw.tex  spatiotemporal_graph.tex
